2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetAddIn.csproj: Don't local copy assemblies.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.AspNet.Gui.AspNetConfigurationPanelWidget.cs:
	  Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployTargetEditor.cs:
	* gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployLaunchDialog.cs:
	  Flush.

2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetConfigurationPanel.cs:
	* MonoDevelop.AspNet.Gui/AspNetConfigurationPanelWidget.cs:
	  Remove unnecessary field.

2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* AspNetAddIn.csproj:
	* MonoDevelop.AspNet.Gui/AspNetFileSelector.cs:
	* gtk-gui/MonoDevelop.AspNet.Gui.AspNetFileSelector.cs:
	* MonoDevelop.AspNet/MasterContentFileDescriptionTemplate.cs:
	  Move AspNetFileSelector to
	  MonoDevelop.Project.Gui.Dialogs.ProjectFileSelectorDialog.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/AspNetAppProjectBinding.cs: Track api
	  changes. Patch by Viktoria Dudka.

2009-07-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* AspNetAddIn.csproj: Fixed build.

2009-07-16  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* AspNetAddIn.csproj:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Started to
	  work on ASP.NET code completion.

2009-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Worked on
	  highlighting support for code blocks.

2009-07-14  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* AspNetAddIn.csproj:
	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Added ASP.NET C#
	  region syntax highlighting.

2009-07-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Properly map the
	  configuration name to a configuration.
